--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "firefly/filament-blog",
+    "name": "cafali/filament-blog",
     "type": "library",
     "description": "An advance blog package for Filament Admin Panel",
     "keywords": [
